--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ geopandas = "^0.14.0"
 contextily = "^1.4.0"
 loguru = "^0.7.2"
 scikit-learn = "^1.3.2"
+chardet = "^5.2.0"
+xarray = "^2023.11.0"
+scipy = "^1.11.4"
 
 
 [build-system]
